Update HUGGINGFACE_TOKEN placeholder in .env.local

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-HUGGINGFACE_TOKEN=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
+HUGGINGFACE_TOKEN= insert yours
 MISTRAL_MODEL=mistralai/Mistral-7B-Instruct-v0.3
 ASR_PROVIDER=whisperx
